<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="40dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/voltarListButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/primary_main"
            android:contentDescription="Voltar"
            android:padding="12dp"
            android:text=""
            app:cornerRadius="50dp"
            app:icon="@drawable/baseline_arrow_back_ios_new_24"
            app:iconTint="@color/white"
            app:strokeColor="@color/primary_main"
            app:strokeWidth="8dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/primary_main"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_name"
            android:textColor="@color/primary_dark"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <EditText
            android:id="@+id/nomeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:padding="12dp" />

        <Space android:layout_width="match_parent" android:layout_height="20dp" />

        <EditText
            android:id="@+id/telefoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefone"
            android:inputType="phone"
            android:padding="12dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <Button
            android:id="@+id/enviarCadastroButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/secondary_main"
            android:text="@string/enviar"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />
    </LinearLayout>
</ScrollView>